--- a/.github/workflows/Update Profiles on Windows.yml
+++ b/.github/workflows/Update Profiles on Windows.yml
@@ -43,4 +43,4 @@ jobs:
       - name: Push Changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.ACCESS_TOKEN  }}
+          token: ${{ secrets.ACCESS_TOKEN  }}
