--- a/.github/workflows/Update Profiles on Windows.yml
+++ b/.github/workflows/Update Profiles on Windows.yml
@@ -11,6 +11,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.ACCESS_TOKEN }}  # ← 添加这3行
 
       - name: Set up Python
         uses: actions/setup-python@v5
