Update Update Profiles on Windows.yml

--- a/.github/workflows/Update Profiles on Windows.yml
+++ b/.github/workflows/Update Profiles on Windows.yml
@@ -33,26 +33,29 @@ jobs:
       - name: Check for changes
         id: check_changes
         run: |
-          git status --porcelain
-          if (git status --porcelain) {
+          git add .
+          $status = git status --porcelain
+          if ($status) {
             echo "has_changes=true" >> $env:GITHUB_OUTPUT
           } else {
             echo "has_changes=false" >> $env:GITHUB_OUTPUT
           }
 
-      - name: Commit changes
+      - name: Commit and Push changes
         if: steps.check_changes.outputs.has_changes == 'true'
         run: |
           Set-TimeZone -Id "China Standard Time"
           $china_date = Get-Date -Format "yyyy-MM-dd HH:mm:ss"
-          $message = "更新（代理配置）: `${china_date}` 更新。"
+          $message = "更新（代理配置）: ${china_date} 更新。"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
-          git add .
           git commit -m "$message"
+          git push
+        shell: pwsh
 
-      - name: Push changes
-        if: steps.check_changes.outputs.has_changes == 'true'
-        uses: ad-m/github-push-action@master
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: No changes
+        if: steps.check_changes.outputs.has_changes == 'false'
+        run: |
+          Write-Host "No changes to commit."
+          exit 0
+        shell: pwsh
